[gd_scene load_steps=17 format=2]

[ext_resource path="res://scenes/models/main character/Personaje.gd" type="Script" id=1]
[ext_resource path="res://sounds/error_003.wav" type="AudioStream" id=2]
[ext_resource path="res://scenes/models/Bullets/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/tiles/industrial.v2.png" type="Texture" id=4]
[ext_resource path="res://sounds/Mario_Jumping-Mike_Koenig.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 16, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 48, 256, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 272, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 80, 272, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 16.3883, 16.3966 )

[sub_resource type="Animation" id=9]
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
Bullet = ExtResource( 3 )
dash_impulse = 40

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2.5, 2.5 )
frames = SubResource( 7 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.28229, 3.66628 )
shape = SubResource( 8 )
one_way_collision = true

[node name="GunPosition" type="Position2D" parent="."]

[node name="GunTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
visible = false

[node name="DashTimer" type="Timer" parent="."]

[node name="invulnerabilityTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Body" type="Node2D" parent="."]

[node name="EffectsAnimation" type="AnimationPlayer" parent="Body"]
anims/damage = SubResource( 9 )
anims/flash = SubResource( 10 )
anims/rest = SubResource( 11 )

[node name="GamerOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="JumpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
[connection signal="killed" from="." to="." method="_on_Player_killed"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="invulnerabilityTimer" to="." method="_on_invulnerabilityTimer_timeout"]
